[gd_scene load_steps=4 format=3 uid="uid://daeuo2oob0pv1"]

[ext_resource type="Script" path="res://framework/interfaces/user_interfaces/basic_new_game.gd" id="1_bn4k8"]
[ext_resource type="Script" path="res://framework/interfaces/widgets/interface_resizer.gd" id="2_53c5d"]
[ext_resource type="PackedScene" uid="uid://b2uhanojuhssd" path="res://framework/interfaces/widgets/basic_header.tscn" id="3_f1d8t"]

[node name="BasicNewGame" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bn4k8")

[node name="InterfaceResizer" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("2_53c5d")
target = NodePath("..")

[node name="Header" parent="." instance=ExtResource("3_f1d8t")]
layout_mode = 2
title = "TEXT_NEW_GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="cancel" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_CANCEL"

[node name="advanced" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_ADVANCED"

[node name="confirm" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEXT_CONFIRM"

[connection signal="back_request" from="Header" to="." method="_on_header_back_request"]
[connection signal="pressed" from="HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/advanced" to="." method="_on_advanced_pressed"]
[connection signal="pressed" from="HBoxContainer/confirm" to="." method="_on_confirm_pressed"]
